gcp/marc-ingress.yaml
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: managed-cert
#   namespace: marc
# spec:
#   domains:
#     - orypoc.cloudops.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ory
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: ory-poc
    kubernetes.io/ingress.global-static-ip-name: orypoc
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: kratos-ui-kratos-selfservice-ui-node
      port: 
        number: 80
  rules:
  - host: orypoc.cloudops.net
    http:
      paths:
      - path: /kratos
        pathType: Prefix
        backend:
          service:
            name: demo-kratos-public
            port:
              number: 80
      - path: /kratos-admin
        pathType: Prefix
        backend:
          service:
            name: demo-kratos-admin
            port: 
              number: 80
